--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 2s ease-in-out;
     color: black; /* Default text color for light mode */
     
 }
@@ -29,9 +29,8 @@ body {
     justify-content: space-between;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background for the container */
-    border-radius: 20px;
-    padding: 40px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    /*padding: 40px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);*/
 }
 
 header {
