--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background for the container */
-    /*padding: 40px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);*/
+    background-color: rgba(255, 255, 255, 0);
 }
 
 header {
