--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,11 @@ body {
 .container {
     width: 100vw;
     height: 100vh;
+    background-color: rgba(255, 255, 255, 0); /* Transparent background */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0);
 }
 
 header {
@@ -37,7 +37,7 @@ header {
 
 header h1 {
     color: #0099FF; /* Change header color for light mode */
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     font-size: 3rem;
 }
 
