--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 .container {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(255, 0, 0, 0.9); /* Transparent background */
+    /*background-color: rgb(255, 0, 0, 0.9); /* Transparent background */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
