--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Continuum', sans-serif;
     height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
