--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header h1 {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /*grid-template-columns: repeat(3, 1fr);*/
     gap: 0px;
     flex-grow: 1;
     justify-items: center;
